<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tooles="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_content">

    <com.zoomlee.zoo.ui.view.OpenDocView
        android:id="@+id/open_doc_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/description_zoomlee_logo"
            android:src="@drawable/zoomlee_green" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="44dp"
            android:contentDescription="@string/description_document_icon"
            android:src="@drawable/document_icon" />

        <TextView
            android:id="@+id/text_file_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="28dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_large"
            tooles:text="My Passport.pdf" />

        <com.zoomlee.zoo.ui.view.ZMButton
            app:font="@string/font_medium"
            android:id="@+id/button_create_new"
            android:layout_width="224dp"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            style="@style/Button.Green"
            android:text="@string/title_create_new_document" />

        <com.zoomlee.zoo.ui.view.ZMButton
            app:font="@string/font_medium"
            android:id="@+id/button_add_to_existing"
            android:layout_width="224dp"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:text="@string/title_add_to_existing_doc"
            style="@style/Button.Green" />

        <com.zoomlee.zoo.ui.view.ZMButton
            app:font="@string/font_medium"
            android:id="@+id/button_cancel"
            android:layout_width="224dp"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="44dp"
            android:text="@string/title_cancel"
            style="@style/Button.White"
            android:textColor="@color/text_gray"/>
    </com.zoomlee.zoo.ui.view.OpenDocView>

    <include layout="@layout/include_splash_cover" />
</RelativeLayout>