<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_content"
    tools:context="com.zoomlee.zoo.ui.fragments.SettingsFragment">

    <com.zoomlee.zoo.ui.view.ZMTextView
        app:font="@string/font_bold"
        android:id="@+id/noDataLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:lines="2"
        android:text="@string/this_document_has_no_attachments"
        android:textAllCaps="true"
        android:textSize="@dimen/text_normal"
        android:textColor="@color/text_empty"
        android:visibility="invisible" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/files_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" />
</FrameLayout>
