<com.zoomlee.zoo.ui.CustomDrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/include_splash_cover" />

        <include layout="@layout/toolbar" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/content_frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_content" />

            <include layout="@layout/include_toolbar_shadow" />
        </FrameLayout>
    </LinearLayout>

    <fragment
        android:id="@+id/navigation_drawer"
        android:name="com.zoomlee.zoo.ui.fragments.NavigationDrawerFragment"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start|left"
        tools:layout="@layout/fragment_navigation_drawer" />

</com.zoomlee.zoo.ui.CustomDrawerLayout>